--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+
+#DDL mode. This is actually a shortcut for the "hibernate.hbm2ddl.auto"
+#property. Defaults to "create-drop" when using an embedded database and no
+#schema manager was detected. Otherwise, defaults to "none".
+# create | create-drop | none | update | validate
+#spring.jpa.hibernate.ddl-auto=
+# mysql settings
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/bibliophile?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+
+#spring boot 2 this is required for all non in-memory db
+spring.datasource.initialization-mode=always
