Adding User & Role classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 # create | create-drop | none | update | validate
 #spring.jpa.hibernate.ddl-auto=
 # mysql settings
-spring.jpa.hibernate.ddl-auto= none
+spring.jpa.hibernate.ddl-auto= update
 spring.datasource.url=jdbc:mysql://localhost:3306/bibliophile?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
@@ -14,3 +14,8 @@ spring.datasource.password=root
 #spring boot 2 this is required for all non in-memory db
 spring.datasource.initialization-mode=always
 
+spring.security.user.roles=ADMIN
+
+#actuator
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=when_authorized
