--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,6 @@
+#logging
+logging.level.com.yosra.bibliophiles =debug
 
-
-#DDL mode. This is actually a shortcut for the "hibernate.hbm2ddl.auto"
-#property. Defaults to "create-drop" when using an embedded database and no
-#schema manager was detected. Otherwise, defaults to "none".
-# create | create-drop | none | update | validate
-#spring.jpa.hibernate.ddl-auto=
-# mysql settings
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/bibliophile?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
@@ -19,3 +14,7 @@ spring.security.user.roles=ADMIN
 #actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=when_authorized
+
+
+spring.mail.host=localhost
+spring.mail.port=1025
